set(LIB_PROJECT_NAME ${PROJECT_NAME})
set(PROJECT_SRCS 
  project/macro_defines.cc
  project/time.cc)
add_library(${LIB_PROJECT_NAME} ${PROJECT_SRCS})

install(TARGETS ${LIB_PROJECT_NAME}
  RUNTIME DESTINATION bin/${PROJECT_NAME}
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  PUBLIC_HEADER DESTINATION include/${PROJECT_NAME} 
)